Actions
Bug #18732
closed[Win32] `File.chardev?` and `File::Stat.chardev?` are not working
Bug #18732:
[Win32] `File.chardev?` and `File::Stat.chardev?` are not working
Actions
Added by nobu (Nobuyoshi Nakada) over 4 years ago. Updated almost 4 years ago.
Applied in changeset git|a0040af6715d85f416f1282588974e151a8164eb.
[Win32] Fix mode of character/pipe device stat [Bug #18732]
ruby_3_1 e3607e687014da4f6347c462e7d11fb67000b733 merged revision(s) a0040af6715d85f416f1282588974e151a8164eb.