[Win32] Fix mode of character/pipe device stat [Bug #18732]